second commit feb 6

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         </form>
 
     </div>
-    <div class="Movies">
+    <div class="movies">
 Movies, TV & Showtimes
     </div>
     <div class="celebs">
@@ -27,5 +27,16 @@ Movies, TV & Showtimes
         & Photos
     </div>
 
+    <div class="news">Industry news
+    </div>
+
+    <div class="watchlist">watchlist add link
+    </div>
+
+    <div class="facebook">add facebook link
+    </div>
+    <section class="container">
+
+    </section>
 </div>
 </body>
