--- a/Index.html
+++ b/Index.html
@@ -9,12 +9,12 @@
 <div class="grid-container">
 
     <div class="IMDBlogo">
-            IMDB
+           <button class="button">IMDB</button>
     </div>
      <div class="search">
          <form action="/action_page.php">
-             <input type="text" search="" value="Find Movies. TV shows, Celebrities and more..">
-             <br>
+             <input type="text" search="" placeholder="Find Movies. TV shows, Celebrities and more..">
+             <!--<br>-->
              <input type="submit" value="Submit">
         </form>
 
@@ -36,6 +36,12 @@ Movies, TV & Showtimes
     <div class="facebook">add facebook link
     </div>
     <section class="container">
+        <div style="background-color:#3b3e43;color:white;">
+            <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+            <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+            <a href="/trailers?pf_rd_m=A2FGELUUNOQJNL&amp;pf_rd_p=183d2499-9862-440a-81d3-77b5416aeefb&amp;pf_rd_r=03R2TPKW81EDHSJY09DA&amp;pf_rd_s=hero&amp;pf_rd_t=15061&amp;pf_rd_i=homepage&amp;ref_=hm_hp_sm">Browse trailers</a>
+        </div>
+
 
     </section>
 </div>
