--- a/Index.html
+++ b/Index.html
@@ -6,43 +6,52 @@
     <link rel="stylesheet" href="Main.css"/>
 </head>
 <body>
-<div class="grid-container">
+    <header class="grid-container">
+        <div class="IMDBlogo">
+            <button class="button">IMDB</button>
+        </div>
+        <form action="/action_page.php">
+            <input type="text" size="80%" placeholder="Find Movies. TV shows, Celebrities and more..">
+                <select name="s" id="quicksearch">
+                    <option value="all" >All</option>
+                    <option value="tt" >Titles</option>
+                    <option value="ep" >TV Episodes</option>
+                    <option value="nm" >Names</option>
+                    <option value="co" >Companies</option>
+                    <option value="kw" >Keywords</option>
+                </select>
+            <input type="submit" value="Submit">
 
-    <div class="IMDBlogo">
-           <button class="button">IMDB</button>
-    </div>
-     <div class="search">
-         <form action="/action_page.php">
-             <input type="text" search="" placeholder="Find Movies. TV shows, Celebrities and more..">
-             <!--<br>-->
-             <input type="submit" value="Submit">
         </form>
 
-    </div>
-    <div class="movies">
-Movies, TV & Showtimes
-    </div>
-    <div class="celebs">
-        Celebs, Events
-        & Photos
-    </div>
-
-    <div class="news">Industry news
-    </div>
-
-    <div class="watchlist">watchlist add link
-    </div>
-
-    <div class="facebook">add facebook link
-    </div>
-    <section class="container">
-        <div style="background-color:#3b3e43;color:white;">
-            <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-            <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-            <a href="/trailers?pf_rd_m=A2FGELUUNOQJNL&amp;pf_rd_p=183d2499-9862-440a-81d3-77b5416aeefb&amp;pf_rd_r=03R2TPKW81EDHSJY09DA&amp;pf_rd_s=hero&amp;pf_rd_t=15061&amp;pf_rd_i=homepage&amp;ref_=hm_hp_sm">Browse trailers</a>
+        <div class="movies">
+            Movies, TV & Showtimes
+        </div>
+        <div class="celebs">
+            Celebs, Events
+            & Photos
         </div>
 
+        <div class="news">Industry news
+        </div>
 
-    </section>
-</div>
+        <div class="watchlist">watchlist add link
+        </div>
+
+        <div class="facebook">add facebook link
+        </div>
+    </header>
+    <main>
+        <section>
+            <div style="background-color:#3b3e43;color:white;">
+                <a target="_blank" href="http://www.imdb.com/trailers?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=183d2499-9862-440a-81d3-77b5416aeefb&pf_rd_r=03R2TPKW81EDHSJY09DA&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_sm">Browse trailers</a>
+            </div>
+        </section>
+        <aside>
+
+        </aside>
+    </main>
+    <footer>
+        <h2>Recently Viewed</h2>
+    </footer>
 </body>
