--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <header class="grid-container">
         <div class="IMDBlogo">
             <button class="button">IMDB</button>
+                <a href="http://www.imdb.com/?ref_=nv_home"></a>
         </div>
         <form action="/action_page.php">
             <input type="text" size="80%" placeholder="Find Movies. TV shows, Celebrities and more..">
@@ -27,24 +28,27 @@
         <div class="movies">
             Movies, TV & Showtimes
         </div>
-        <div class="celebs">
+        <div class="celebs" href="https://contribute.imdb.com/czone?ref_=nv_cm_cz_2">
             Celebs, Events
             & Photos
         </div>
 
         <div class="news">Industry news
+
         </div>
 
         <div class="watchlist">watchlist add link
         </div>
 
-        <div class="facebook">add facebook link
+        <div class="facebook">
+            <a href="https://graph.facebook.com/v2.8/oauth/authorize?client_id=127059960673829&amp;scope=email%2Cuser_about_me%2Cuser_birthday&amp;state=eyI0OWU2YyI6IjE3ZGYiLCJ1IjoiaHR0cHM6Ly93d3cuaW1kYi5jb20vP3JlZl89bnZfZmJfbGdpbiIsIm1hbnVhbExpbmsiOiJmYWxzZSJ9&amp;redirect_uri=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Ffacebookhandler%2F">
+                <span class="signin-facebook-text">Sign in with Facebook</span></a>
         </div>
     </header>
     <main>
         <section>
-            <div style="background-color:#3b3e43;color:white;">
-                <a target="_blank" href="http://www.imdb.com/trailers?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=183d2499-9862-440a-81d3-77b5416aeefb&pf_rd_r=03R2TPKW81EDHSJY09DA&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_sm">Browse trailers</a>
+            <div style="background-color:#3b3e43;color:white; ">
+                <a target="blank" href="http://www.imdb.com/trailers?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=183d2499-9862-440a-81d3-77b5416aeefb&pf_rd_r=03R2TPKW81EDHSJY09DA&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_sm">Browse trailers</a>
             </div>
         </section>
         <aside>
