commit just before turning project in

--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header class="grid-container">
-        <div class="IMDBlogo">
+        <section class="IMDBlogo">
             <button class="button">IMDB</button>
                 <a href="http://www.imdb.com/?ref_=nv_home"></a>
-        </div>
+        </section>
         <form action="/action_page.php">
             <input type="text" size="80%" placeholder="Find Movies. TV shows, Celebrities and more..">
                 <select name="s" id="quicksearch">
@@ -45,15 +45,73 @@
                 <span class="signin-facebook-text">Sign in with Facebook</span></a>
         </div>
     </header>
+    <aside>
+        <!--This is the section that would take up the right third of the page "aside"-->
+        <a href="http://aax-us-east.amazon-adsystem.com/x/c/Qvo1JU17iiPje635jY0j10EAAAFhdjmXLQEAAADKASJyANI/http://pda-bes.amazon.com/c?i=1$AgAAAAAAAAAEAAAAAAAAAAMAAAAA2TZhzC4AEoclChiUbTh7Y9EbejR38FqDV-SQKPq15slB87c8dHa8cG5GnKsiFEeQ85pLdQsT0AVIChsuWEJk5-7NSF8zQmQx4a55rVcGHGukC0zkdUxv9wzIT1iSxIh.jp02VbqUhHY1jTvb9u-51OrlzXWAVhBHAely5-olDWy1Nuydup2vrEypX9-hJdR4YpLDZTziwbBvDTZlsEnVlyZFeN-NVTETZBWX68BsvQNLPrKx52zTM9G9QOrRt8RShn3.ivcqdblMrnAxzzE-krxTSLyhwyZvtyhxP1zLVz6RsfxmX8fSI3VzjZqLOOztjz0zfpwpVhj8CYTqsM56bsXFkcThuaUHs6vMAOYCkTthJehb8hVBCjF-apgbuwMoJgEzHVHZyagrjUemlkg.tg3o4r6-js6Xyb9tw9qs9n0HBx7p0ya2ZNa8BAEbVR41KDT7Dl6buClBhbJSl9IqIApxOvAddHBOeM.A-nlEur5TElEIqNwpmFoHODA5sLurXtLtrv2dn6JwLvrh93203ubj7y1ZmBmjbWr3BLGTV447c-NBGpDT7pzoMwvdBK-sip2e7TG26DetoUFfZb6fVlGHGFna.bj9rgi3Nook5xltHchSL0129woF4P8pBnHyaiDh7wDHAydrCtiQnKoto-ObKV1OST-gJZcvsLwnPMdgOKo-2y5725gDtchHjubtmvuVsmM.ISTUVHcOsoR8KRkw6-T.CNxnZeAG4htqPxzLVo9b.OyGSR4EGyvr4yDvvNF8pt-fx3Zuo6.-Q0NhOJf8TS.atyiHgMvAsge2uRF5ZvijNLaVydiCbonZamJmgyK8uhovZ.G7sYeIPAD293CMenfl1L4IZKAa-7qZVpodPe5vUSc-nB9ldtziFeib2R0VFiM8ntF-4NXs8gv7ynDjK4Cj-O-7h7YLSnaZTUzrO7vXGp1ukFXle27VD-nOkrq6AW8cJ2eMeZb4OG1KK-SpIlxAPv3NRu.V4tZvCcvN.aYFV9QLoNq1L83iVy.1tMr1HptjdwOeLMK3N8oYpP2kL5ODmlFe-61edEQmo-8vW0hKA5QgBC7MraSvpsV0WbgyUw8M6sHoKWrR67nrWL47greauPihIlEuslTBuyt-qu3ZbR3xJ2w60iEo4k2951HA52Y0ARcIAMmbImMGyKxOt3APyOxDyOOvTWD-VjzuUczXNss9-kIAedNNXz2vxacW6R6e8dV-2mgtSbKBfPJ7MqlyCXVHR0eaHJWvieqch.wCtBJCia6jqVcZcb7s.MjQsk6hKRA5wTXFYx0BrbJEYxXdoUAw00v7jy-crztHp5bmkY-h5uiIKYMQw.KIoiwZMTpQN.sAeX9DJS0FnL2tLLR7vimQwPnhD08-zmXJ7QT0qBX4kfZMEevA9PxT39qCGoQDJVRqaLC-IddmyP89skKqDup7Iv5HM8xrbxmihfn4xagxwFE6gvYcZoN28.4L-7TwKcCoIWI4wJqlirtTn4Yt4arIdHwo0ble2dUzQduK&d=https://www.weboffries.com">
+            <img border="0" src="https://images-na.ssl-images-amazon.com/images/G/01/shazam/300x250-H-Wrap-COMPANION-1b449bca-da77-4e7b-8fda-b9d25d239b37.jpg">
+        </a>
+        <ul>
+            <li><a href="http://www.imdb.com/title/tt4477536?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t0">Fifty Shades Freed</a></li>
+            <li><a href="http://www.imdb.com/title/tt6802308?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t1">The 15:17 to Paris</a></li>
+            <li><a href="http://www.imdb.com/title/tt5117670?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t2">Peter Rabbit</a></li>
+            <li><a href="http://www.imdb.com/title/tt4823538?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t3">La Boda de Valentina</a></li>
+            <li><a href="http://www.imdb.com/title/tt7218518?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t4">Padman</a></li>
+            <li><a href="http://www.imdb.com/title/tt5999530?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t5">Before We Vanish</a></li>
+            <li><a href="http://www.imdb.com/title/tt5390066?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t6">Permission</a></li>
+            <li><a href="http://www.imdb.com/title/tt5687814?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_t7">Golden Exits</a></li>
+            <P><a href="http://www.imdb.com/movies-in-theaters/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2413b25e-e3f6-4229-9efd-599bb9ab1f97&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_otw_sm">See more opening this week</a></P>
+        </ul>
+        <a href="http://aax-us-east.amazon-adsystem.com/x/c/QkYxOKxJ6BnijefmSMFWQ6IAAAFhdjmXKAEAAADKAb0cFCs/http://pda-bes.amazon.com/c?i=1$AgAAAAAAAAAEAAAAAAAAAAMAAAAA2TZhzGrI7mwKj0z5lqx9NiLQabJxDUH6ucTo-b4eecOponI5QvtpXYRmV1IN3OPOtPwqSqOWVqFkVYf8TUVT82R5Yqavq0o8yj3bbWwz631MMwtzk2hplMDTjvek8Ql7P8h4rPXXvzSJBQRnwN4HVh9ekDuPQ83JAHJJtUAdRSi8mf2j3Vpk1Ses6nOZfkLbz7ijV9eBb-NRMJ.aAFckFIuraBQlsvJr-70ssT9tAY2MPjpc3dvxVEZ0Xasjqw0PnRvIesGZyHJb-vPsS3ObBune0JhJ4Oa69-ouh12zSJLqBXolZOl2IIemAvjr-Hu3VLhA7qYW2kVXkGlJWeeIZXp9e-g68rTALq6EKEKp7nwhrWlsDIVcAPknrJ3MmBuAw5ZeBuKxbk1qSh5kyClDhQKDhd9TThuKMmzSOsU9tg47bhyYhwv8xChfG42X5OZlkoINylXfa.aFVoy5cWN9Xr3dwEpemY-QQRBFIR3Lw7jHwJFzDxbBjCnCquYIWvwrJS-NMUaIYUCGBx8SV6IgdILIIHQ9-zmRSMBjFGpG1HqGmXQiGLiuTzjKOwuwH0bLxW80Sh586Nd9WSoCakrjxbeesC--M8bftzPWf5hS3vw4qsy3yc9snWxUG0vmPIjXp5qhbutwqubl8Qj2OWRMOOROM3LR9M6daTsP5Jto8pGUIfX0E7S2j6TGWk9U0jKVfvSC7gCdtANWlasQWw9Xwl2lGOMtghMPbFaNNyRCo8-wb2IKFv1h0fYlVskS77UYAktfhu807zw7hOiNvm1ePjI1wAp8xG4DApMEnJYWtL5svDsUye.l--EPLtN8IG4FRq82soe.7rWJ-Lo8BRnl2TB6rkmypC-PfyQi2sJs9lqZJseqVDpvhoWfbltaA9zRYF79gmINOXm6J-O7f4LFjWqgBMz3LzOaH3pYXewOo1Hqq4zOJfOSe3Z6FTITyeMxM0OKPG3WtlIP7h0wA7OzIvbTlsfSbB1oAONXWpkZw4anWwpriAF4J3MFM4rs5EQdaz-dzE6B4K4Sd88Xt94rYi-w9TRdoz94Z5WFC.iV8aBztr0CMVjlYsz4j8G6o53fj10N6djqMW0C363jgUQzP-zHJJ33kn-6dzSrM4rM3n.-KES6T6kAASLrFfCgGFKw4hXGQTv-A2x3OiB5wwHFnwhNhfQrOzkJWYlIORjyJknON2l6jsOMgvFfHJKSxK-RUwr.Y.4YxBTsEB4iZ5t2uGfsyKSDeUqPFKObdpiM7K2ac-U0dCBMAI-3jFce6pKRJq3D4O.uTYw44tvb514-fnY0dBXvnUbMENyGUNUR8cGlccrYwSpdpUH.njdMQbb6cjQVe0l.IW1sN9A2VBSX2VcECG2S3R-x.mAV.g35fUX04HvY4O0Lq.0LdIYWVNT0GGxCq87hTjlo32RZhMg9L7cgjcxDtRLeykYgYSWaqNfr6ElvJp5HSoovveCqY.V6tTJNzfR8qVqlUkHYAQDgj.2hA1w_&d=http://www.imdb.com/superheroes/?ref_=nv_sf_supr_5">
+            <img border="0" src="http://ia.media-imdb.com/images/G/01/shazam/Synchrony-BlackPanther-roto-v1-1EH1o0._V486547377_.jpg">
+        </a>
+        <div>
+            <a href="http://www.imdb.com/showtimes?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=8872b8ce-ede1-42d7-ad7a-9ac8ef50b844&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-5&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_sh_lk1">Get Tickets & Showtimes »</a>
+        </div><br>
+        <a href="http://www.imdb.com/chart/boxoffice?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=740b2354-425b-4cd3-947b-7f9cb4349875&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-7&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_cht_hd">Now Playing (Box Office)</a>
+        <ul>
+            <li><a href="http://www.imdb.com/title/tt1825683?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=b7da399c-a987-4453-bc16-f3ae0c58eee3&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-8&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_cs_t0">B.ack Panthers</a></li>
+            <li><a href="http://www.imdb.com/title/tt4701724?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=b7da399c-a987-4453-bc16-f3ae0c58eee3&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-8&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_cs_t1">Early Man</a></li>
+            <li><a href="http://www.imdb.com/title/tt6951892?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=b7da399c-a987-4453-bc16-f3ae0c58eee3&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-8&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_cs_t2">Samson</a></li>
+            <li><a href="http://www.imdb.com/title/tt6774212?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=b7da399c-a987-4453-bc16-f3ae0c58eee3&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-8&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_cs_t3">Aiyaari</a></li>
+            <li><a href="http://www.imdb.com/title/tt5814592?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=b7da399c-a987-4453-bc16-f3ae0c58eee3&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-8&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_cs_t4">The Party</a></li>
+        </ul>
+        <a href="http://www.imdb.com/chart/boxoffice?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=740b2354-425b-4cd3-947b-7f9cb4349875&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=right-7&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_cht_sm">see more coming soon</a><br>
+    </aside>
     <main>
-        <section>
-            <div style="background-color:#3b3e43;color:white; ">
-                <a target="blank" href="http://www.imdb.com/trailers?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=183d2499-9862-440a-81d3-77b5416aeefb&pf_rd_r=03R2TPKW81EDHSJY09DA&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_sm">Browse trailers</a>
-            </div>
+        <section style="background-color:#3b3e43;padding:20px;">
+            <a href="http://www.imdb.com/list/ls053181649/videoplayer/vi2044573721?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=745c16d8-acda-40e2-8dbf-a140ba6cad79&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_i_1"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjQ4NTIyNDEwOF5BMl5BanBnXkFtZTgwMDY0OTU3NDM@._V1_SY298_CR0,0,201,298_AL_.jpg"></a>
+            <a href="http://www.imdb.com/list/ls053181649/videoplayer/vi2782640153?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=745c16d8-acda-40e2-8dbf-a140ba6cad79&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_i_2"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BNzczMjUwMzk0M15BMl5BanBnXkFtZTgwNjY4OTQ3NDM@._V1_SY298_CR0,0,201,298_AL_.jpg"></a>
+            <a href="http://www.imdb.com/list/ls053181649/videoplayer/vi1926805529?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=745c16d8-acda-40e2-8dbf-a140ba6cad79&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_i_3"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTYyMjAyMTI5NF5BMl5BanBnXkFtZTgwOTAxMTQ3NDM@._V1_SY298_CR0,0,201,298_AL_.jpg"></a>
         </section>
-        <aside>
-
-        </aside>
+        <sectionv style="background-color:#3b3e43;color:white; ">
+            <a target="blank" href="http://www.imdb.com/trailers?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=183d2499-9862-440a-81d3-77b5416aeefb&pf_rd_r=03R2TPKW81EDHSJY09DA&pf_rd_s=hero&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_hp_sm">Browse trailers</a>
+        </sectionv>
+        <section>
+            <p style="font-size:26px;" href="http://www.imdb.com/list/ls025849840/videoplayer/vi3588012057?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=0ce99351-f8da-4d3c-8722-1fa4f40b85dd&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_is_ak_hd">Watch the Latest Episode of "The IMDb Show"</p>
+            <a href="http://www.imdb.com/list/ls025849840/videoplayer/vi3588012057?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=0ce99351-f8da-4d3c-8722-1fa4f40b85dd&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_is_ak_i_1"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTgzMzU4MTAyNV5BMl5BanBnXkFtZTgwOTQ2MDY3NDM@._CR10,5,1261,710_UX1248_UY702._SY351_SX624_AL_.jpg"></a>
+            <p>On "<a href="http://www.imdb.com/title/tt7549864/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=0ce99351-f8da-4d3c-8722-1fa4f40b85dd&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_is_ak_lk1">The IMDb Show</a>," <a href="http://www.imdb.com/name/nm0444223/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=0ce99351-f8da-4d3c-8722-1fa4f40b85dd&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_is_ak_lk2">Arielle Kebbel</a> shares how she told her parents about her <a href="http://www.imdb.com/title/tt4477536/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=0ce99351-f8da-4d3c-8722-1fa4f40b85dd&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_is_ak_lk3">Fifty Shades Freed</a>
+                role, and <a href="http://www.imdb.com/title/tt1825683/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=0ce99351-f8da-4d3c-8722-1fa4f40b85dd&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_is_ak_lk4">Black Panther</a> stars name the real-life heroes who inspired their characters.<br>
+                <a href="http://www.imdb.com/list/ls025849840/videoplayer/vi3588012057?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=0ce99351-f8da-4d3c-8722-1fa4f40b85dd&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-2&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_is_ak_sm">Watch the show</a>
+            </p>
+        </section>
+        <section>
+            <p style="font-size:26px;"> <a href="http://www.imdb.com/superheroes/upcoming-superhero-movies/ls063634068?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_hd"</a>Upcoming Superhero Movies We're Excited About</p>
+            <p>With <a href="http://www.imdb.com/title/tt5095030/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_lk1">Ant-Man and the Wasp</a>, <a href="http://www.imdb.com/title/tt0439572/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_lk2">Flashpoint</a>, and <a href="http://www.imdb.com/title/tt1825683/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_lk3">Black Panther</a> heading to theaters, the future looks bright for superhero fans. Check out these and other upcoming superhero movies.</p>
+        </section>
+        <section>
+            <a href="http://www.imdb.com/superheroes/upcoming-superhero-movies/ls063634068/mediaviewer/rm1731482368?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_i_1"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BNTAwNDU5MjQyMF5BMl5BanBnXkFtZTgwMDkwMDk1NDM@._CR686,181,814,814_UX402_UY402._SY201_SX201_AL_.jpg"></a>
+            <a href="http://www.imdb.com/superheroes/upcoming-superhero-movies/ls063634068/mediaviewer/rm2651130368?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_i_2"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BNTg1NjA3M2MtMjUzZS00MjE4LWFhNzMtYjFlMmE0YzFjODY3XkEyXkFqcGdeQXVyNTkxNTIzMjM@._CR518,10,782,782_UX402_UY402._SY201_SX201_AL_.jpg"></a>
+            <a href="http://www.imdb.com/superheroes/upcoming-superhero-movies/ls063634068/mediaviewer/rm114306048?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_i_3"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjMxOTA5NzIxM15BMl5BanBnXkFtZTgwMzUyNTQ5MjI@._CR436,35,1295,1295_UX402_UY402._SY201_SX201_AL_.jpg"></a>
+        </section>
+        <section>
+            <a href="http://www.imdb.com/superheroes/upcoming-superhero-movies/ls063634068?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=f2cd2be3-5fcf-4962-adeb-11d6755a42a9&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-3&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_spr_ushm_sm">Find more upcoming superhero movies</a>
+        </section>
+        <section>
+            <p style="font-size:26px;"><a href="http://www.imdb.com/imdbpicks/athletes-who-became-screen-stars/rg97491712?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=8b22bf6e-b3ea-4ef5-a7b8-227681d6d513&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-4&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_pks_ph_ath_hd"</a>Athletes Who Became Screen Stars</p>
+            <a href="http://www.imdb.com/imdbpicks/athletes-who-became-screen-stars/rg97491712/mediaviewer/rm148426496?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=8b22bf6e-b3ea-4ef5-a7b8-227681d6d513&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-4&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_pks_ph_ath_i_1"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMzMxMzQ1NzUzMV5BMl5BanBnXkFtZTgwNzI3OTM4MTE@._CR336,147,606,606_UX402_UY402._SY201_SX201_AL_.jpg"</a>
+            <a href="http://www.imdb.com/imdbpicks/athletes-who-became-screen-stars/rg97491712/mediaviewer/rm2318896640?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=8b22bf6e-b3ea-4ef5-a7b8-227681d6d513&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-4&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_pks_ph_ath_i_2"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTM1Nzg5MDYzM15BMl5BanBnXkFtZTcwODkwMDkwMw@@._CR144,0,1143,1143_UX402_UY402._SY201_SX201_AL_.jpg"</a>
+            <a href="http://www.imdb.com/imdbpicks/athletes-who-became-screen-stars/rg97491712/mediaviewer/rm1517128704?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=8b22bf6e-b3ea-4ef5-a7b8-227681d6d513&pf_rd_r=00XTJ8YDEWNB1KMF2A2P&pf_rd_s=center-4&pf_rd_t=15061&pf_rd_i=homepage&ref_=hm_pks_ph_ath_i_3"><img border="0" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTU5NzMyMjcwMV5BMl5BanBnXkFtZTcwMTEzODkyMw@@._CR349,191,719,719_UX402_UY402._SY201_SX201_AL_.jpg"</a>
+        </section>
     </main>
     <footer>
         <h2>Recently Viewed</h2>
